--- a/index.html
+++ b/index.html
@@ -86,19 +86,8 @@
           color: white;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-  }
-}
-</script>
-</head>
   <body class="bg-background-dark text-white overflow-x-hidden min-h-screen flex flex-col">
     <div id="root" class="flex flex-col min-h-screen"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
